--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,34 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3 {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+:root {
+  --light-green: #84c08e;
+  --light-beige: #fbf1d6;
+  --flashy-orange: #ff632e;
+  --camel: #f4c581;
+  --dark-green: #84c08e;
+  --spacing: 8px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: var(--flashy-orange);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
