--- a/frontend/src/components/WallPic.css
+++ b/frontend/src/components/WallPic.css
@@ -1,9 +1,8 @@
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: bottom;
+.pic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
 }
 
-@media screen and (min-width: 600px) {
-}
+@media screen and (min-width: 600px) {}
