--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -5,10 +5,11 @@ header img {
 header {
   background-color: var(--dark-green);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   color: var(--light-beige);
   padding: 12px 1px 12px 16px;
+  padding-right: 20px;
 }
 
 header h1 {
@@ -22,5 +23,6 @@ header h1 {
 @media screen and (min-width: 600px) {
   header {
     flex-direction: column;
+    margin-right: none;
   }
 }
