--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -3,7 +3,7 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 20px;
+  font-size: 17px;
   padding: 20px;
   color: var(--light-beige);
 }
@@ -20,8 +20,13 @@ footer div {
 
 /*-----------VERSION TABLETTE-------------------*/
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 768px) {
   footer div {
     width: 15%;
   }
+
+  footer{
+    font-size: 25px;
+  }
+
 }
