--- a/frontend/src/components/ProductDetail.css
+++ b/frontend/src/components/ProductDetail.css
@@ -1,23 +1,39 @@
 .result {
-  background-color: red;
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-grow: 2;
 }
 
 .imgProduct {
   width: 80%;
+  display: flex;
+  justify-content: center;
+  height: 50%;
 }
 .imgProduct img {
   object-fit: cover;
-  width: 100%;
 }
 
 .result p {
   text-align: center;
+  font-size: 20px;
+  padding: 60px 15px;
 }
 
 .result h1 {
-  font-size: 25px;
-  margin: 20px 0px 20px 0px;
+  font-size: 30px;
+  margin: 20px 15px 20px 15px;
+}
+
+.result .allergen {
+  font-weight: bold;
+}
+
+@media screen and (min-width: 768px) {
+  .result p {
+    text-align: center;
+    font-size: 20px;
+    padding: 8% 20%;
+  }
 }
