--- a/frontend/src/components/ProductDetail.css
+++ b/frontend/src/components/ProductDetail.css
@@ -18,16 +18,21 @@
 .result p {
   text-align: center;
   font-size: 20px;
-  padding: 60px 15px;
+  padding: 25px 15px;
 }
 
 .result h1 {
   font-size: 27px;
-  margin: 20px 15px 20px 15px;
+  margin: 28px 15px 10px 15px;
 }
 
 .result .allergen {
   font-weight: bold;
+}
+
+.ingredient {
+  font-size: 15px;
+  text-decoration: underline #84c08e;
 }
 
 @media screen and (min-width: 768px) {
