--- a/frontend/src/components/Cards.css
+++ b/frontend/src/components/Cards.css
@@ -29,3 +29,12 @@
   width: 30vw;
   height: 35vw;
 }
+
+
+/*-----------VERSION TABLETTE-------------------*/
+
+@media screen and (min-width: 768px) {
+  .productCard li  {
+    font-size: 2rem;
+}
+}
