--- a/frontend/src/components/AllergenCheckboxes.css
+++ b/frontend/src/components/AllergenCheckboxes.css
@@ -47,12 +47,15 @@
 
 
 
-/-----------VERSION TABLETTE-------------------/
-
+/*-----------VERSION TABLETTE-------------------*/
 
 @media screen and (min-width: 768px) {
   .textAllergic {
-    font-size: 1.5rem;
+   font-size: 1.5rem;
+  }
+
+  .checkbox {
+    width: 44px;
+    height: 31px;
   }
 }
-
