--- a/frontend/src/components/ContactForm.css
+++ b/frontend/src/components/ContactForm.css
@@ -33,3 +33,36 @@
   color: grey;
   opacity: 1;
 }
+
+.contactButton {
+    text-decoration: none;
+    padding: 9px;
+    font-size: 1em;
+    color: #ffffff;
+    background-color: var(--flashy-orange);
+    border-radius: 19px;
+    border: 4px solid #ffffff;
+    box-shadow: 3px 3px 12px #444444;
+    margin-bottom: 15px;
+  }
+  
+  .contactButton:hover {
+  padding: 10px;
+  background-color: var(--dark-green);
+  border-radius: 24px;
+  box-shadow: 1px 1px 4px #777777;
+  }
+
+@media screen and (min-width: 768px) {
+  .contact label {
+    font-size: 1.5rem;
+  }
+
+  .contact textarea {
+    font-size: 1.3rem;
+  }
+
+  .contactButton {
+    font-size: 1.5rem;
+  }
+}
