--- a/frontend/src/components/ProductDetail.css
+++ b/frontend/src/components/ProductDetail.css
@@ -36,9 +36,15 @@
 }
 
 @media screen and (min-width: 768px) {
-  .result p {
-    text-align: center;
-    font-size: 20px;
-    padding: 8% 20%;
+
+  .result h1 {
+  font-size: 2.5rem;
   }
+
+  .result p {
+    text-align: justify;
+    font-size: 25px;
+    padding: 8% 20%;
 }
+  }
+
