--- a/frontend/src/pages/Contact.css
+++ b/frontend/src/pages/Contact.css
@@ -4,3 +4,10 @@
   color: var(--light-green);
   font-size: 30px;
 }
+
+@media screen and (min-width: 768px) {
+  .contact-container h1 {
+    font-size: 3rem;
+  }
+
+}
