--- a/frontend/src/components/AllergenCheckboxes.css
+++ b/frontend/src/components/AllergenCheckboxes.css
@@ -6,10 +6,10 @@
 
 .allergenArrow {
   padding: 3px;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: var(--flashy-orange);
   border-radius: 19px;
-  border: 4px solid #FFFFFF;
+  border: 4px solid #ffffff;
   box-shadow: 2px 3px 5px #444444;
   margin-bottom: 15px;
 }
@@ -44,15 +44,13 @@
   display: none;
 }
 
-
-
-
-/-----------VERSION TABLETTE-------------------/
-
-
-@media screen and (min-width: 768px) {
+/-----------VERSION
+  TABLETTE-------------------/
+  @media
+  screen
+  and
+  (min-width: 768px) {
   .textAllergic {
     font-size: 1.5rem;
   }
 }
-
