--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -6,7 +6,6 @@ footer {
   font-size: 17px;
   padding: 20px;
   color: var(--light-beige);
-
 }
 
 footer img {
@@ -20,8 +19,10 @@ footer div {
 }
 
 .basdepage {
-  margin-top: 20vw;
+  position: relative;
+  bottom: 0;
   width: 100%;
+  margin-top: 10vh;
 }
 
 /*-----------VERSION TABLETTE-------------------*/
@@ -34,7 +35,9 @@ footer div {
     font-size: 25px;
   }
   .basdepage {
-    margin-top: 20vw;
+    position: relative;
     width: 100%;
+    bottom: 0;
+    margin-top: 10vh;
   }
 }
