modifs classes css

--- a/frontend/src/components/Cards.css
+++ b/frontend/src/components/Cards.css
@@ -28,6 +28,7 @@
 .productCard .productImg {
   width: 30vw;
   height: 35vw;
+  margin-top: 6vw;
 }
 
 /*-----------VERSION TABLETTE-------------------*/
