Searchbar hover, Card wordbreak

--- a/frontend/src/components/Card.css
+++ b/frontend/src/components/Card.css
@@ -1,7 +1,6 @@
 .infoprod {
-  width: 30vw;
   text-align: center;
-}
-
-.ficheProd {
+  inline-size: 40vw;
+  word-break: break-word;
+  hyphens: manual;
 }
