--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,10 +33,19 @@ a:hover {
 }
 
 body {
+  padding: 0;
   margin: 0;
   font-family: "Ubuntu", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  min-height: 100vh;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 code {
