--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -22,7 +22,9 @@ footer div {
   position: relative;
   bottom: 0;
   width: 100%;
-  margin-top: 10vh;
+  /** margin-top: 10vh; **/
+  background-color: blue;
+  margin-top: auto;
 }
 
 /*-----------VERSION TABLETTE-------------------*/
